<resources>
    <string name="app_name">Q the Music</string>
    <string name="google_client_id_acceptance">345540049924-j2pgaphe6hhoios3oag2g7ktpdo1crrb.apps.googleusercontent.com</string>
    <string name="google_client_secret_acceptance">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</string>
    <string name="google_client_redirect_uri_acceptance">https://qthemusic-acceptance.firebaseapp.com/__/auth/handler</string>
    <string name="google_client_id_development">74605093159-funodu4lv47i9u57h2meqahlcan5elo3.apps.googleusercontent.com</string>
    <string name="google_client_secret_development">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</string>
    <string name="google_client_redirect_uri_development">https://qthemusic-staging.firebaseapp.com/__/auth/handler</string>
    <string name="google_client_id_production">716441253502-tetnmv0sg1nnvkkr715bagro7equ0ubh.apps.googleusercontent.com</string>
    <string name="google_client_secret_production">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</string>
    <string name="google_client_redirect_uri_production">abcd</string>
    <string name="google_client_id_staging">74605093159-funodu4lv47i9u57h2meqahlcan5elo3.apps.googleusercontent.com</string>
    <string name="google_client_secret_staging">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</string>
    <string name="google_client_redirect_uri_staging">https://qthemusic-staging.firebaseapp.com/__/auth/handler</string>
    <string name="facebook_app_id">348614333948475</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">527db1c05e0c2c1ce9b40deabd02d582</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="call_not_supported">Call Not Supported</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="server_setting">Server Settings</string>
    <string name="minimun_version">Minimun Version</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noInternet">Please Connect to working internet</string>
    <string name="alert">Alert</string>
    <string name="retry">Retry</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="error">Error</string>
    <string name="session_expire_title">Session Expired</string>
    <string name="session_expire_message">Your session has been expired please login again</string>
    <string name="build_version">Build Version</string>
    <string name="url">Url</string>
    <string name="crash_app">Crash App</string>
    <string name="str_screen_under_development">Under Development Screen</string>
    <string name="msg_subscribed">Subscribe To FCM Topic Successfully</string>
    <string name="msg_subscribe_failed">Failed to Subscribe to FCM Topic</string>
    <string name="str_select_image">Select Image</string>
    <string name="str_select_video">Select Video</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Go To Setting</string>
    <string name="camera_permission_msg">Please enable camera permission from Settings.</string>
    <string name="gallery_permission_msg">Please enable gallery permission from Settings.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="str_home">Home</string>
    <string name="str_search">Search</string>
    <string name="str_categories">Categories</string>
    <string name="str_profile">Profile</string>
    <string name="str_recommended_for_you">Recommended for you</string>
    <string name="str_songs">Songs</string>
    <string name="str_albums">Albums</string>
    <string name="str_artists">Artists</string>
    <string name="str_what_s_your_mood">What\'s your mood?</string>
    <string name="str_trending_songs">Trending Songs</string>
    <string name="str_video">Video</string>
    <string name="str_audio">Audio</string>
    <string name="str_underdevelopment_feature">Underdevelopment feature</string>
    <string name="str_playing_from">PLAYING FROM</string>
    <string name="log_out">Log Out</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_qmusic">About QMusic</string>
    <string name="following_artist_updates">Following Artist Updates</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="notifications">Notifications</string>
    <string name="view_profile">view profile</string>
    <string name="kamran_khan">Kamran Khan</string>
    <string name="change">Change</string>
    <string name="current_plan">Current Plan</string>
    <string name="listen_with_premium">Listen With Premium</string>
    <string name="free_account">Free Account</string>
    <string name="your_interests">Your Interests</string>
    <string name="buying_history">Buying History</string>
    <string name="downloaded">Downloaded</string>
    <string name="listening_history">Listening History</string>
    <string name="following_artist">Following Artists</string>
    <string name="purchased_songs">Purchased Songs</string>
    <string name="purchased_albums">Purchased Albums</string>
    <string name="albums">Albums</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="downloaded_songs">Downloaded Songs</string>
    <string name="playlists">Playlists</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="email">Email</string>
    <string name="phone">Phone no.</string>
    <string name="phone_number_added">Phone Number Added</string>
    <string name="add">ADD</string>
    <string name="not_added">Not Added</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="profileSetting">Profile Setting</string>
    <string name="what_s_your_number">What\'s your Number?</string>
    <string name="we_ll_send_a_code_to_verify_provided_number">We\'ll send a code to verify provided number.</string>
    <string name="phone_number">Phone number</string>
    <string name="send_code">Send Code</string>
    <string name="name">Name</string>
    <string name="change_username">Change Username</string>
    <string name="update">Update</string>
    <string name="change_gender">Change Gender</string>
    <string name="change_address">Change Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip_code">Zipcode</string>
    <string name="male">Male</string>
    <string name="select_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-binary</string>
    <string name="nonbinary">Non binary</string>
    <string name="no_answer">No answer</string>
    <string name="term_and_codition_text">Term And Condition Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. \n \nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n \nIt was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum. \n \npassages and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="privacy_policy_text">Privacy policy Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. \n \nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n \nIt was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum. \n \npassages and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sing Up</string>
    <string name="or">OR</string>
    <string name="required">required</string>
    <string name="error_invalid_email">enter valid email</string>
    <string name="forgot_password_tag">Forgot Password</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="otp_verifaton">OTP Verification</string>
    <string name="code_has_send">Code has been sent on</string>
    <string name="email_sami">samiiiolle@gmail.com</string>
    <string name="resend_tag">Resends in</string>
    <string name="resend_time">00:</string>
    <string name="set_password">Set Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="invalid_email">Enter valid email</string>
    <string name="invalid_password">Enter valid password (at least have 8 character, 1 capital or small letter, 1 special character or 1 number)</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="get_email_fb">email</string>
    <string name="enter_valid_otp">OTP must have 5 digits</string>
    <string name="resend">Resend</string>
    <string name="this_required">This field is required</string>
    <string name="error_access_token">Access Token Not Found</string>
    <string name="password_never_match_error">Password never match</string>
    <string name="fb_public_profile_args">public_profile</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_desc">channel_desc</string>
    <string name="str_empty">Empty</string>
    <string name="str_filled">Filled</string>
    <string name="address_required">Address is required</string>
    <string name="city_required">City is required</string>
    <string name="state_required">State is required</string>
    <string name="country_required">Country is required</string>
    <string name="zipcode_required">Zipcode is required</string>
    <string name="address_successfully_updated">Address successfully updated</string>
    <string name="gender_successfully_updated">Gender successfully updated</string>
    <string name="name_successfully_updated">Name successfully updated</string>
    <string name="otp_send_successfully">Otp send successfully</string>
    <string name="enter_valid_no">Please enter a valid phone number</string>
    <string name="enter_no">Please enter phone number</string>
    <string name="profile_updated">Profile successfully updated.</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="user_name">Name</string>
    <string name="user_gender">Gender</string>
    <string name="your_address_tag">Your Address</string>
    <string name="why_we_asking_tag">Why we are asking?</string>
    <string name="user_address">Address</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="your_interest_msg">Select 2 to 5 topics according to your interests.</string>
    <string name="no_data_found">No Data Found</string>
    <string name="total_amount_spent">Total Amount Spent</string>
    <string name="all_payment_type">All Payment Type</string>
    <string name="recently_played">Recently Played</string>
</resources>