<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_for_forgot_password"
        tools:context=".ui.fragments.yourInterestFragment.YourInterestFragment">


        <TextView
            android:id="@+id/tv_your_interest_tag"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:text="@string/your_interests"
            android:textColor="@color/color_white"
            android:fontFamily="@font/manrope_bold"
            android:textSize="@dimen/_22sp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_your_interest_msg"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_70dp"
            android:layout_marginStart="@dimen/_70dp"
            android:text="@string/your_interest_msg"
            android:textColor="@color/color_white"
            android:fontFamily="@font/manrope_regular"
            android:textSize="@dimen/_16sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_your_interest_tag" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_view_your_interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_your_interest_msg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_40dp"
            />


        <TextView
            android:id="@+id/btn_interest_lets_go"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:background="@drawable/shape_sigin_btn"
            android:fontFamily="@font/europa_bold"
            android:gravity="center"
            android:text="@string/lets_go"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>