<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black">

    <include
        android:id="@+id/activityToolbar"
        layout="@layout/app_bar_blue_center_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_songs"
        style="@style/TabButtonTextStyle"
        android:layout_width="@dimen/_100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityToolbar"
        android:layout_marginStart="@dimen/_14dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/selected_tab_background"
        android:text="@string/str_songs" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_albums"
        style="@style/TabButtonTextStyle"
        android:layout_width="@dimen/_100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityToolbar"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_toEndOf="@id/btn_songs"
        android:background="@drawable/unselected_tab_background"
        android:text="@string/str_albums" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_artists"
        style="@style/TabButtonTextStyle"
        android:layout_width="@dimen/_100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityToolbar"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_toEndOf="@id/btn_albums"
        android:background="@drawable/unselected_tab_background"
        android:text="@string/str_artists" />

    <FrameLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_artists" />

    <!--
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewListeningHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btn_artists" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewGrigLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btn_artists"
            android:layout_marginTop="@dimen/_15dp"
            android:paddingHorizontal="@dimen/_10dp"
            android:scrollbarSize="@dimen/_2dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            />
    -->

    <!--    tools:listitem="@layout/item_purchased_album"-->

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>