<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    android:background="@color/color_white"
    app:cardCornerRadius="@dimen/_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:orientation="vertical"
        android:padding="@dimen/_15dp">

        <ImageView
            android:id="@+id/imageviewCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_clear_24"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/textMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/change_gender"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_18sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_text_input_layout"
            style="@style/Widget.AppTheme.TextInputLayoutList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/light_gray_color"
            app:boxStrokeColor="@color/logout_button_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/color_white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/logout_button_drawable">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/update"
                android:textColor="@color/color_white" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/logout_button_color"
        android:progressTint="@color/logout_button_color"
        android:visibility="gone" />
</androidx.cardview.widget.CardView>